--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,7 @@
     <div class="container">
       <ul class="nav">
         <li>
-          <a href="{% url dashboard %}" class="logo">Passion | Focus | Intensity | Solution | Distribution | Iteration</a>
+          <a href="{% url dashboard %}" class="logo">Passion &gt; Focus &gt; Intensity &gt; Solution &gt; Distribution &gt; Iteration</a>
         </li>
       </ul>
       <ul class="nav nav-pills pull-right">
