--- a/templates/deployments/associate.html
+++ b/templates/deployments/associate.html
@@ -14,7 +14,24 @@
         <div class="span4">
             <form method="POST" action="{% if slug %}{% url deployment slug %}{% else %}{% url associate_deployment %}{% endif %}">
               {% csrf_token %}
-              {% include "form_fields.html" %}
+                {% for field in form %}
+                    {% if field.html_name == "is_production" %}
+                        <div class="row-fluid">
+                            <div class="span1">
+                        {{ field }}</div><div class="span10" style="margin-top: 6px;"> Production Environment</div>
+                        </div>
+                    {% else %}
+                        <label>
+                            {% if field.field.required %}
+                                <strong>{{ field.field.label}}</strong>
+                            {% else %}
+                                {{ field.field.label }}
+                            {% endif %}
+                            {% for error in field.errors %}{% if forloop.counter0 > 0 %}, {% endif %}<span class="errorlist"><i class="icon-exclamation-sign"></i> {{ error }}</span>{% endfor %}
+                        </label>
+                        {{ field }}
+                    {% endif %}
+                {% endfor %}
 
               <div class="btn-row">
                   <a href="{% url deployments %}" class="btn">Cancel</a>
